css/style.css
@import url(https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css);
:root {
  /* padrões */
  --color-main: hsla(355, 62%, 45%, 1);
  --color-header: hsla(0, 0%, 100%, 1);
  --color-bg: hsla(240, 43%, 97%, 1);
  --color-menu-opacity: hsla(0, 0%, 68%, 0.5);
  --font-main: 'Montserrat', sans-serif;
  --animation-time-menu: 250ms;
}

body {
  width: 100%;
  display: flex;
  flex-direction: column;
}

section {
  width: 100%;
  min-height: 12vh;
}

.teste {
  background-color: black;
}

.img_menu {
  display: none;
}

.white {
  color: white;
}

/*HEADER CSS*/

.footer_containerMobile {
  display: none;
}

.header_container {
  display: flex;
  flex-direction: column;
  height: 117px;
  width: 100%;
  background-color: #ffff;
  align-items: center;
}

.header_alert {
  width: 100%;
  height: 37px;
  text-align: center;
  background-color: var(--color-main);
  display: flex;
  align-items: center;
  justify-content: center;
}

.alert_text {
  font-size: 14px;
  font-weight: 700;
  font-family: var(--font-main);
  padding-top: 0.1%;
  margin-right: 1%;
  color: white;
}

.header_main {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 90%;
  height: 80px;
}

.logo_menu_container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.menu_container {
  display: flex;
  height: 100%;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  color: var(--color-main);
}

.menu_container li {
  list-style: none;
  font-family: var(--font-main);
  font-style: normal;
  font-size: 16px;
  font-weight: 400;
  margin-left: 44px;
}

.category__desk {
  display: flex;
  align-items: center;
  column-gap: 3px;
  height: 100%;
}

.category__desk:hover > .category__desk__sub__list {
  display: flex;
}
.category__desk__sub__list {
  position: absolute;
  left: 0;
  top: 117px;

  width: 100%;
  height: 286px;

  display: none;
  justify-content: space-around;

  background-color: var(--color-header);
}

.category__desk__sub__list:hover {
  display: flex;
}

.category__desk__sub__container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.category__desk__sub__title {
  font-weight: 700;
  font-size: 1.25rem;
}

.category__desk__sub__item {
  font-size: 1rem;
  font-weight: 400;
  cursor: pointer;
}

.header_icons {
  display: flex;
  flex-direction: row;
  width: 100px;
  justify-content: space-between;
}

/*FOOTER CSS*/

.footer_containerDesktop {
  background-color: var(--color-main);
  width: 100%;
  height: 839px;
  display: flex;
  flex-direction: column;
  align-items: center;
  bottom: 0;
}

.footer_space {
  height: 160px;
  width: 100%;
  background-color: white;
}

.foot_logo_container {
  width: 598px;
  height: 96px;
  align-items: flex-end;
  display: flex;
}

.foot_logo {
  background-color: gray;
  width: 413px;
  height: 207px;
}

.newsletter_container {
  width: 1792px;
  height: 96px;
  align-items: center;
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  align-items: flex-end;
  margin-top: 64px;
}

.login_icon {
  margin-right: 3%;
}

.newsletter_text {
  height: 96px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.logo_textContainer {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}

.newsletter_text h2 {
  font-family: var(--font-main);
  font-size: 20px;
  font-weight: 500;
  color: white;
}

.newsletter_text p {
  font-family: var(--font-main);
  font-weight: 400;
  color: white;
  font-size: 16px;
}

.checkbox_container {
  display: flex;
  align-items: center;
}

.newsletter_option {
  width: 24px;
  height: 24px;
}

.newsletter_option_text {
  font-family: var(--font-main);
  font-weight: 400;
  color: white;
  margin-left: 3%;
  font-size: 16px;
}

.newsletter_input_container {
  height: 96px;
  align-items: center;
  justify-content: space-between;
  display: flex;
}

.newsletter_button {
  height: 48px;
  width: 153px;
  background-color: var(--color-main);
  border: 2px solid white;
  font-size: 16px;
  font-weight: 500;
  font-family: var(--font-main);
  color: white;
}

.newsletter_input::placeholder {
  color: white;
}

.newsletter_input {
  height: 48px;
  width: 404px;
  background: transparent;
  border: 2px solid white;
  padding-left: 2%;
  font-size: 16px;
  font-weight: 500;
  font-family: var(--font-main);
}

.footer_social_container {
  display: flex;
  width: 90%;
  height: 72px;
  justify-content: space-between;
}

.logo_footer {
  width: 124px;
  height: 32px;
}

.empresa {
  width: 421px;
  display: flex;
  align-items: flex-end;
}

.space {
  width: 421px;
}

.social {
  width: 421px;
  display: flex;
  color: white;
  float: right;
  justify-content: space-between;
  float: right;
}

.social_icons {
  width: 85px;
  align-items: flex-end;
  display: flex;
  flex-direction: column-reverse;
}

.social_icons_size {
  width: 52px;
  height: 52px;
}

.footer_columns {
  width: 90%;
  height: 242px;
  margin-top: 50px;
  display: flex;
  justify-content: space-between;
}

.footer_columns_1 {
  border-right: 2px solid white;
  width: 421px;
  height: 242px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.desc_text {
  font-size: 16px;
  font-weight: 400;
  font-family: var(--font-main);
  color: white;
}

.adress_text {
  font-size: 14px;
  font-weight: 400;
  font-family: var(--font-main);
  color: white;
}

.email_text {
  font-size: 16px;
  font-weight: 700;
  font-family: var(--font-main);
  color: white;
}

.footer_columns li {
  list-style: none;
  font-size: 16px;
  font-weight: 700;
  font-family: var(--font-main);
  color: white;
}

.footer_columns h6 {
  font-size: 16px;
  font-weight: 400;
  font-family: var(--font-main);
  color: white;
}
/* ... */

